jobs/OpenCOG_U1604_CogUtil.log
Started by user [8mha:////4L2jTPWu9zIb56dnp8RqVObesKKV2DVGI0jJXlam1DqAAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Building in workspace /var/lib/jenkins/workspace/OpenCOG_U1604_CogUtil
[OpenCOG_U1604_CogUtil] $ /bin/sh -xe /tmp/jenkins527253172835990691.sh
+ COGDIR=../OpenCOG_U1604
+ . ../OpenCOG_U1604/build.docker/docker.env
+ CID=7ab428051e8c034a1fbb89f66a89a214537d0d5a57c0896f61d6b37048bb1225
+ DKRUNROOT=docker exec --user root   7ab428051e8c034a1fbb89f66a89a214537d0d5a57c0896f61d6b37048bb1225
+ DKRUNUSER=docker exec --user jenkins  7ab428051e8c034a1fbb89f66a89a214537d0d5a57c0896f61d6b37048bb1225
+ UID=125
+ GID=132
+ LOGFILE=/var/lib/jenkins/jobs/OpenCOG_U1604_CogUtil/builds/326/log
+ cat


**********************************************************
**********************************************************
**********************************************************
**********************************************************
*****                                                *****
*****                  Cogutil TEST                *****
*****                                                *****
**********************************************************
**********************************************************
**********************************************************
**********************************************************


+ echo GIT_COMMIT=
GIT_COMMIT=
+ echo GIT_BRANCH=
GIT_BRANCH=
+ echo GIT_URL=
GIT_URL=
+ WDIR=cogutil
+ JOBDIR=../OpenCOG_U1604/dependencies
+ cat
+ chmod +x ../OpenCOG_U1604/dependencies/job1
+ docker exec --user jenkins 7ab428051e8c034a1fbb89f66a89a214537d0d5a57c0896f61d6b37048bb1225 bash dependencies/job1
/home/opencog
+ pwd
+ cd cogutil
+ cd build
+ make -j8 test
[  5%] Building CXX object opencog/util/CMakeFiles/cogutil.dir/mt19937ar.cc.o
In file included from /home/opencog/cogutil/opencog/util/mt19937ar.cc:26:0:
/home/opencog/cogutil/opencog/util/numeric.h: In function 'bool opencog::is_approx_eq_ulp(double, double, long int)':
/home/opencog/cogutil/opencog/util/numeric.h:306:49: error: expected ',' before ')' token
  static_assert(sizeof(int64_t) == sizeof(double));
                                                 ^
/home/opencog/cogutil/opencog/util/numeric.h:306:49: error: expected string-literal before ')' token
/home/opencog/cogutil/opencog/util/numeric.h:307:51: error: expected ',' before ')' token
  static_assert(sizeof(int64_t) == sizeof(long int));
                                                   ^
/home/opencog/cogutil/opencog/util/numeric.h:307:51: error: expected string-literal before ')' token
make[3]: *** [opencog/util/CMakeFiles/cogutil.dir/mt19937ar.cc.o] Error 1
opencog/util/CMakeFiles/cogutil.dir/build.make:350: recipe for target 'opencog/util/CMakeFiles/cogutil.dir/mt19937ar.cc.o' failed
CMakeFiles/Makefile2:231: recipe for target 'opencog/util/CMakeFiles/cogutil.dir/all' failed
make[2]: *** [opencog/util/CMakeFiles/cogutil.dir/all] Error 2
make[1]: *** [CMakeFiles/test.dir/rule] Error 2
CMakeFiles/Makefile2:106: recipe for target 'CMakeFiles/test.dir/rule' failed
Makefile:197: recipe for target 'test' failed
make: *** [test] Error 2
+ DSTATUS=TESTFAIL
+ /var/lib/jenkins/status/updateStatus TESTFAIL /var/lib/jenkins/jobs/OpenCOG_U1604_CogUtil/builds/326/log OpenCOG_U1604_CogUtil
Auto packing the repository in background for optimum performance.
See "git help gc" for manual housekeeping.
error: The last gc run reported the following. Please correct the root cause
and remove .git/gc.log.
Automatic cleanup will not be performed until the file is removed.

error: pack-objects died of signal 15
error: failed to run repack

Already up-to-date.
